--- a/public/phpmetrics/all.html
+++ b/public/phpmetrics/all.html
@@ -49,7 +49,7 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 22:57:18        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-27 09:23:17        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
@@ -514,7 +514,7 @@
                                                             <td class="js-sort-number">12</td>
                                                             <td class="js-sort-number">12</td>
                                                             <td class="js-sort-number">App\Dice\</td>
-                                                            <td class="js-sort-number">0.2</td>
+                                                            <td class="js-sort-number">0.19</td>
                                                             <td class="js-sort-number">3</td>
                                                             <td class="js-sort-number">0</td>
                                                             <td class="js-sort-number">0</td>
@@ -677,52 +677,52 @@
                                                             <td class="js-sort-number">App\Controller\ProjController</td>
                                                             <td class="js-sort-number"></td>
                                                             <td class="js-sort-number"></td>
-                                                            <td class="js-sort-number">10</td>
-                                                            <td class="js-sort-number">10</td>
-                                                            <td class="js-sort-number">10</td>
-                                                            <td class="js-sort-number">2</td>
+                                                            <td class="js-sort-number">14</td>
+                                                            <td class="js-sort-number">14</td>
+                                                            <td class="js-sort-number">14</td>
                                                             <td class="js-sort-number">8</td>
+                                                            <td class="js-sort-number">6</td>
                                                             <td class="js-sort-number">0</td>
                                                             <td class="js-sort-number">0</td>
-                                                            <td class="js-sort-number">48</td>
-                                                            <td class="js-sort-number">39</td>
-                                                            <td class="js-sort-number">12</td>
-                                                            <td class="js-sort-number">33</td>
+                                                            <td class="js-sort-number">41</td>
+                                                            <td class="js-sort-number">28</td>
+                                                            <td class="js-sort-number">10</td>
+                                                            <td class="js-sort-number">31</td>
                                                             <td class="js-sort-number">1</td>
                                                             <td class="js-sort-number">0</td>
                                                             <td class="js-sort-number">1</td>
-                                                            <td class="js-sort-number">555</td>
-                                                            <td class="js-sort-number">103</td>
-                                                            <td class="js-sort-number">3711.01</td>
-                                                            <td class="js-sort-number">41.71</td>
-                                                            <td class="js-sort-number">154783.55</td>
-                                                            <td class="js-sort-number">0.02</td>
-                                                            <td class="js-sort-number">1.24</td>
-                                                            <td class="js-sort-number">8599</td>
-                                                            <td class="js-sort-number">88.97</td>
-                                                            <td class="js-sort-number">133</td>
-                                                            <td class="js-sort-number">422</td>
+                                                            <td class="js-sort-number">470</td>
+                                                            <td class="js-sort-number">98</td>
+                                                            <td class="js-sort-number">3108.91</td>
+                                                            <td class="js-sort-number">37.57</td>
+                                                            <td class="js-sort-number">116795.36</td>
+                                                            <td class="js-sort-number">0.03</td>
+                                                            <td class="js-sort-number">1.04</td>
+                                                            <td class="js-sort-number">6489</td>
+                                                            <td class="js-sort-number">82.75</td>
+                                                            <td class="js-sort-number">112</td>
+                                                            <td class="js-sort-number">358</td>
                                                             <td class="js-sort-number">17</td>
-                                                            <td class="js-sort-number">86</td>
-                                                            <td class="js-sort-number">60</td>
-                                                            <td class="js-sort-number">275</td>
-                                                            <td class="js-sort-number">215</td>
-                                                            <td class="js-sort-number">51.99</td>
-                                                            <td class="js-sort-number">18.88</td>
-                                                            <td class="js-sort-number">33.11</td>
-                                                            <td class="js-sort-number">3.3</td>
-                                                            <td class="js-sort-number">225</td>
-                                                            <td class="js-sort-number">1.01</td>
-                                                            <td class="js-sort-number">226.01</td>
-                                                            <td class="js-sort-number">2250</td>
-                                                            <td class="js-sort-number">10.13</td>
-                                                            <td class="js-sort-number">2260.13</td>
+                                                            <td class="js-sort-number">81</td>
+                                                            <td class="js-sort-number">45</td>
+                                                            <td class="js-sort-number">231</td>
+                                                            <td class="js-sort-number">186</td>
+                                                            <td class="js-sort-number">53.86</td>
+                                                            <td class="js-sort-number">22.27</td>
+                                                            <td class="js-sort-number">31.59</td>
+                                                            <td class="js-sort-number">2.3</td>
+                                                            <td class="js-sort-number">576</td>
+                                                            <td class="js-sort-number">0.65</td>
+                                                            <td class="js-sort-number">576.65</td>
+                                                            <td class="js-sort-number">8064</td>
+                                                            <td class="js-sort-number">9.16</td>
+                                                            <td class="js-sort-number">8073.16</td>
                                                             <td class="js-sort-number">App\Controller\</td>
                                                             <td class="js-sort-number">0.02</td>
                                                             <td class="js-sort-number">0</td>
-                                                            <td class="js-sort-number">7</td>
+                                                            <td class="js-sort-number">6</td>
                                                             <td class="js-sort-number">1</td>
-                                                            <td class="js-sort-number">Too complex method code,Probably bugged,Too long,</td>
+                                                            <td class="js-sort-number">Probably bugged,</td>
                                                     </tr>
                                             <tr>
                                                             <td class="js-sort-number">App\Controller\BookController</td>
