--- a/public/phpmetrics/panel.html
+++ b/public/phpmetrics/panel.html
@@ -49,16 +49,16 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 22:57:18        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-27 09:23:17        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">1368</div>
-                <div class="label">lines of code <span title="Last value: 1084" class="progress progress-neutral progress-gt">+284 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                <div class="number">1324</div>
+                <div class="label">lines of code <span title="Last value: 1325" class="progress progress-neutral progress-lt">-1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -69,8 +69,8 @@
                     19                    <small> (100                        %)
                     </small>
                 </div>
-                <div class="label">classes <span title="Last value: 18" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                <div class="label">classes <span title="Last value: 19" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -101,7 +101,7 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">58</div>
+                <div class="number">56</div>
                 <div class="label">logical lines of code by class</div>
             </div>
         </div>
@@ -109,7 +109,7 @@
 
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">13</div>
+                <div class="number">12</div>
                 <div class="label">logical lines of code by method</div>
             </div>
         </div>
@@ -118,8 +118,8 @@
             <div class="bloc bloc-number">
                 <div
                     class="number">1.47</div>
-                <div class="label">average LCOM <span title="Last value: 1.5" class="progress progress-good progress-lt">-0.03 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
+                <div class="label">average LCOM <span title="Last value: 1.47" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -148,7 +148,7 @@
                             <td>App\Dice\Dice                                                                <span class="badge" title="Maintainability Index">59.66</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">59.66</span>
                             </td>
-                            <td>0.2</td>
+                            <td>0.19</td>
                         </tr>
                                             <tr>
                             <td>App\Repository\BookRepository                                                                <span class="badge" title="Maintainability Index">107.63</span>
@@ -207,9 +207,9 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="number">
-                    7.11                </div>
-                <div class="label">Average cyclomatic complexity by class <span title="Last value: 5.33" class="progress progress-bad progress-gt">+1.78 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+                    6.53                </div>
+                <div class="label">Average cyclomatic complexity by class <span title="Last value: 6.53" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22 12l-4-4v3H3v2h15v3z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
